task1-hardening/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-api
  namespace: payments
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ledger-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ledger-api
                port:
                  number: 8080
